# OrderFlow

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile  GEMINI.md  PRODUCT_DEFINITION.md  README.md  alembic.ini  category_examples.json  context.md  docker-compose.yml  main.py  movements_examples.json  pyproject.toml  requirements.txt  user_examples.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 09d4f25a9486_init_2.py  1825f37c5734_improve_security_with_nullable_false_.py  3f0e2346c6c7_increment_character_size_for_columns.py  80fdcd22ac9a_init.py  9d92f7fd3ec7_init_2.py  d6cd48f142e0_changed_amount_type_to_decimal_for_.py  e7bca561ff16_init_1.py
app/: dependencies.py  main.py
app/core/: app_logging.py  config.py  rate_limit.py
app/core/logging_configs/: config.json  mylogger.py
app/db/: database.py
app/models/: __init__.py  category.py  movements.py  reports.py  user.py
app/router/: auth.py  categories.py  exports.py  movements.py  reports.py  users.py
app/router/v1/: categories.py  exports.py  movements.py  reports.py  user_auth.py  users.py
app/schemas/: __init__.py  categories.py  movements.py  reports.py  users.py
app/services/: categories.py  exports.py  movements.py  reports.py  user_auth.py  users.py  validators.py
logs/: orderflow_logs.jsonl  orderflow_logs.log.1
tests/: test_main.py
tests/router/V1/: test_categories.py
