[project]
name = "orderflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bleach>=6.2.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "reportlab>=4.4.3",
    "ruff>=0.12.10",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
]
